--- a/public/index.html
+++ b/public/index.html
@@ -26,9 +26,12 @@
       Learn how to configure a non-root public URL by running `npm run build`.
     -->
     <title>Truyện Hay</title>
+    <script src="https://accounts.google.com/gsi/client" async defer></script>
+    
   </head>
   <body>
-    <noscript>You need to enable JavaScript to run this app.</noscript>
+    <div id="fb-root"></div>
+    <script async defer crossorigin="anonymous" src="https://connect.facebook.net/vi_VN/sdk.js#xfbml=1&version=v15.0&appId=647646060186725&autoLogAppEvents=1" nonce="q8npsE4B"></script>
     <div id="root"></div>
     <!--
       This HTML file is a template.
