--- a/public/index.html
+++ b/public/index.html
@@ -27,7 +27,10 @@
     -->
     <title>Truyện Hay</title>
     <script src="https://accounts.google.com/gsi/client" async defer></script>
-    
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@300&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Noto+Sans:ital@1&display=swap" rel="stylesheet">
   </head>
   <body>
     <div id="fb-root"></div>
