--- a/public/index.html
+++ b/public/index.html
@@ -2,30 +2,29 @@
 <html lang="vi">
   <head>
     <meta charset="utf-8" />
-    <link rel="icon" href="%PUBLIC_URL%/favicon.ico" />
+    <link rel="icon" href="%PUBLIC_URL%/angry-panda.ico" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <meta name="theme-color" content="#000000" />
+    <meta property="og:image" content="https://res.cloudinary.com/sttruyen/image/upload/v1660379654/295631243_1022629278418391_936904009150532582_n_rdsnbh.png"/>
+    <meta property="og:title" content="Đọc truyện tranh hay, độc quyền tại sttruyen.xyz"/>
+    <meta property="og:site_name" content="sttruyenxyz đọc truyện hay" />
+    <meta property="og:url" content="https://sttruyen.xyz/"/> 
+    <meta property="og:type" content="Website" />
+    <meta property="o:description" content="Sttruyen là web đọc truyện mọi thể loại, truyện hay mà bạn không thể tìn thấy ở bất cứ nơi nào khác. Bản quyền của tất cả các truyện hoàn toàn thuộc về sttruyen.xyz
+    bởi các câu chuyện trong web đều những thành viên của sttruyen.xyz nghĩ ra. Chúng tôi hy vọng rằng bạn sẽ có 1 buổi đọc truyện thật tuyệt vời." />
+    <meta itemprop="name" content="Đọc truyện tranh hay, độc quyền tại sttruyen.xyz" />
     <meta
-      name="description"
-      content="Web site created using create-react-app"
-    />
-    <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" />
-    <!--
-      manifest.json provides metadata used when your web app is installed on a
-      user's mobile device or desktop. See https://developers.google.com/web/fundamentals/web-app-manifest/
-    -->
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.2.1/css/all.min.css">
+    itemprop="description"
+    content="Sttruyen là web đọc truyện mọi thể loại, truyện hay mà bạn không thể tìn thấy ở bất cứ nơi nào khác. Bản quyền của tất cả các truyện hoàn toàn thuộc về sttruyen.xyz
+    bởi các câu chuyện trong web đều những thành viên của sttruyen.xyz nghĩ ra. Chúng tôi hy vọng rằng bạn sẽ có 1 buổi đọc truyện thật tuyệt vời."
+  />
+  <meta name="keyword" content="Sttruyen,truyện hay,đọc truyện online" />
+    <link rel="apple-touch-icon" href="%PUBLIC_URL%/angry-192.png" />
     <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
-    <!--
-      Notice the use of %PUBLIC_URL% in the tags above.
-      It will be replaced with the URL of the `public` folder during the build.
-      Only files inside the `public` folder can be referenced from the HTML.
-
-      Unlike "/favicon.ico" or "favicon.ico", "%PUBLIC_URL%/favicon.ico" will
-      work correctly both with client-side routing and a non-root public URL.
-      Learn how to configure a non-root public URL by running `npm run build`.
-    -->
-    <title>Truyện Hay</title>
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.1.2/css/all.min.css">
+   
+    <title>Thế Giới Truyện</title>
+    
     <script src="https://accounts.google.com/gsi/client" async defer></script>
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
